inline-doc for MurmurClasses, add missing params in some of MurmurClasses methods, fix JS CDATA tags in user section, remove obsolete setUserTexture code, allow displaying of users avatar in user section; users profile, valign top user section profile captions

--- a/themes/user/default/style.css
+++ b/themes/user/default/style.css
@@ -16,7 +16,7 @@ a:active, a:hover, a:focus {  }
 a:link { color:white; }
 a:visited { color:white; }
 a[href^="http://"] { padding-right:12px; background:url(../../../img/external.png) right 0px no-repeat; }
-form table tr td.formitemname { text-align:right; padding:2px 6px 2px 2px; }
+form table tr td.formitemname { text-align:right; padding:2px 6px 2px 2px; vertical-align:top; }
 .fullwidth { width:100%; }
 input[type=text], input[type=password], input[type=text], select { width:100%; }
 .alignl { text-align:left; }
